@@ -1,5 +1,9 @@
 2007-12-15 Gary Burton <gary.burton@zen.co.uk>
-	* src/Editors/_EditFamily.py: emit family-update signal #1416
+	* src/DisplayTabs/_ChildModel.py:
+	* src/Editors/_EditFamily.py: add fallback for birth date (feature #1448)
+
+2007-12-15 Gary Burton <gary.burton@zen.co.uk>
+	* src/Editors/_EditFamily.py: emit family-update signal (bug #1416)
 
 2007-12-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/Calendar.py: Added relationships (feature #1086)
